# WallPaperForUs

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindQtAV.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/plugins/: CMakeLists.txt  Plugin.h  PluginManager.cpp  PluginManager.h
src/libs/ui/: CMakeLists.txt  MainWindow.ui  mainwindow.cpp  mainwindow.h
